--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html",
+    "lint": "eslint --ignore-path .gitignore src/ server/"
   },
   "dependencies": {
     "@eliaspourquoi/vue-map": "^0.0.7",
@@ -13,6 +14,7 @@
     "aframe": "^0.9.2",
     "animejs": "^3.1.0",
     "d3": "^5.12.0",
+    "eslint-config-prettier": "^6.5.0",
     "iplocation": "^6.1.0",
     "papaparse": "^5.1.0",
     "parcel-plugin-static-files-copy": "^2.2.1",
@@ -28,6 +30,10 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "parcel": "^1.12.4",
     "pug": "^2.0.4",
     "vue-template-compiler": "^2.6.10"
@@ -48,5 +54,22 @@
   },
   "browserslist": [
     "last 2 Chrome versions"
-  ]
+  ],
+  "eslintConfig": {
+    "extends":[ "airbnb-base", "prettier"],
+    "parserOptions": {
+      "ecmaVersion": 8,
+      "sourceType": "module"
+    },
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1,
+      "no-restricted-syntax": 0,
+      "no-await-in-loop": 0
+    }
+  }
 }
