--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "aframe": "^0.9.2",
     "animejs": "^3.1.0",
     "d3": "^5.12.0",
+    "deep-equal": "^1.1.1",
     "eslint-config-prettier": "^6.5.0",
+    "fast-deep-equal": "^2.0.1",
     "iplocation": "^6.1.0",
     "papaparse": "^5.1.0",
     "parcel-plugin-static-files-copy": "^2.2.1",
@@ -26,7 +28,8 @@
     "vue-p5": "^0.8.0-rc4",
     "vue-router": "^3.1.3",
     "vue-typed-js": "^0.1.2",
-    "vue-use-web": "^0.9.0"
+    "vue-use-web": "^0.9.0",
+    "worker-timers": "^5.0.34"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.2",
@@ -56,9 +59,12 @@
     "last 2 Chrome versions"
   ],
   "eslintConfig": {
-    "extends":[ "airbnb-base", "prettier"],
+    "extends": [
+      "airbnb-base",
+      "prettier"
+    ],
     "parserOptions": {
-      "ecmaVersion": 8,
+      "ecmaVersion": 9,
       "sourceType": "module"
     },
     "env": {
