--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wpkg/vue-scrollbar": "^0.0.17",
     "aframe": "^0.9.2",
     "animejs": "^3.1.0",
+    "better-interval": "^1.0.9",
     "d3": "^5.12.0",
     "deep-equal": "^1.1.1",
     "eslint-config-prettier": "^6.5.0",
@@ -68,7 +69,7 @@
       "sourceType": "module"
     },
     "env": {
-      "node": true,
+      "browser": true,
       "es6": true
     },
     "rules": {
