--- a/package.json
+++ b/package.json
@@ -9,27 +9,20 @@
   },
   "dependencies": {
     "@eliaspourquoi/vue-map": "^0.0.7",
+    "@tensorflow/tfjs-core": "1.2.9",
     "@vue/composition-api": "^0.3.2",
-    "@wpkg/vue-scrollbar": "^0.0.17",
     "aframe": "^0.9.2",
-    "animejs": "^3.1.0",
-    "better-interval": "^1.0.9",
     "d3": "^5.12.0",
-    "deep-equal": "^1.1.1",
-    "eslint-config-prettier": "^6.5.0",
-    "fast-deep-equal": "^2.0.1",
-    "iplocation": "^6.1.0",
-    "papaparse": "^5.1.0",
+    "face-api.js": "^0.21.0",
     "parcel-plugin-static-files-copy": "^2.2.1",
     "portal-vue": "^2.1.6",
-    "src": "^1.1.2",
     "tone": "^13.8.25",
     "vue": "^2.5.18",
     "vue-hot-reload-api": "^2.3.4",
     "vue-p5": "^0.8.0-rc4",
     "vue-router": "^3.1.3",
     "vue-typed-js": "^0.1.2",
-    "vue-use-web": "^0.9.0",
+    "vue-web-cam": "^1.9.0",
     "worker-timers": "^5.0.34"
   },
   "devDependencies": {
@@ -39,8 +32,10 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "parcel": "^1.12.4",
-    "pug": "^2.0.4",
     "vue-template-compiler": "^2.6.10"
+  },
+  "resolutions": {
+    "tfjs-image-recognition-base/@tensorflow/tfjs-core": "<=1.2.9"
   },
   "alias": {
     "vue": "./node_modules/vue/dist/vue.common.js",
